--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,6 +3,7 @@
 <div id="bottom"></div>
 
 <header id="top">
+  <img id="sushiCat" src="/assets/img/sushiCat.png">
   <h2>Sushi Time!</h2>
   <form class="add-sushi">
     <button type="submit"><img src="/assets/img/sushi.svg" width="35px"></img></button>
